--- a/tutorial/01/package.json
+++ b/tutorial/01/package.json
@@ -21,16 +21,18 @@
     "watch": "npm-watch"
   },
   "dependencies": {
-    "mocha-coderoad": "0.9.3"
+    "chai": "3.5.0",
+    "chai-spies": "0.7.1",
+    "mocha-coderoad": "^0.10.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.13.0",
+    "browser-sync": "^2.14.0",
     "coderoad-redux-js": "^0.1.0",
     "concurrently": "^2.2.0",
-    "npm-watch": "^0.1.5"
+    "npm-watch": "^0.1.6"
   },
   "watch": {
     "reload": {
